--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 body {
   box-sizing: border-box;
   background-color: crimson;
+  overflow-x: hidden;
 }
 
 /* api section*/
@@ -191,6 +192,7 @@ body {
   width: 100%;
   background-color: azure;
   background: linear-gradient(to bottom right, var(--lighter), var(--light));
+  background: url(img/plugins.svg);
 }
 
 /* footer */
@@ -234,13 +236,33 @@ body {
   background-position: bottom;
   position: relative;
 
-  -webkit-clip-path: polygon(0% 10%, 100% 25%, 100% 100%, 0% 100%);
-  clip-path: polygon(0% 10%, 100% 25%, 100% 100%, 0% 100%);
+  /* -webkit-clip-path: polygon(0% 10%, 100% 25%, 100% 100%, 0% 100%);
+  clip-path: polygon(0% 10%, 100% 25%, 100% 100%, 0% 100%); */
 
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+}
+
+.explore__divider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.explore__divider svg {
+  position: relative;
+  display: block;
+  width: calc(131% + 1.3px);
+  height: 150px;
+}
+
+.explore__divider .shape-fill {
+  fill: #ffffff;
 }
 
 .explore__box {
@@ -285,5 +307,5 @@ body {
 .footer__logo {
   width: 9rem;
   margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2rem;
 }
