--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,16 @@ body {
   background: linear-gradient(to bottom right, var(--light), white);
   padding: 1rem;
   font-family: Arial, Helvetica, sans-serif;
+  transition: transform 0.3s;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+
+.card:hover {
+  transform: translateY(-0.5rem) scale(1.03);
 }
 
 .card:not(:last-child) {
